--- a/admin/config.yml
+++ b/admin/config.yml
@@ -11,6 +11,7 @@ collections:
   - name: "blog"
     label: "Articles"
     folder: "_posts"
+    tag: "blog"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
