--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,5 @@
 backend:
   name: git-gateway
-backend:
-  name: git-gateway
   branch: main
 
 media_folder: "images"
@@ -11,13 +9,14 @@ collections:
   - name: "blog"
     label: "Articles"
     folder: "_posts"
-    tag: "blog"
     create: true
+    # This is the "secret sauce" that connects to your homepage
+    tag: "blog" 
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "post.njk"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Author", name: "author", widget: "string", default: "Admin"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Author", name: "author", widget: "string"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Featured Image", name: "thumbnail", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
