--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
   name: git-gateway
   branch: main
+  publish_mode: simple
+display_url: https://your-site-name.netlify.app
 
 media_folder: "images"
 public_folder: "/images"
