--- a/admin/config.yml
+++ b/admin/config.yml
@@ -16,7 +16,7 @@ collections:
     tag: "blog" 
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
-      - {label: "Layout", name: "layout", widget: "hidden", default: "post.njk"}
+     - {label: "Tags", name: "tags", widget: "hidden", default: ["blog"]}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Author", name: "author", widget: "string", default: "Admin"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
