--- a/admin/config.yml
+++ b/admin/config.yml
@@ -15,8 +15,9 @@ collections:
     # This is the "secret sauce" that connects to your homepage
     tag: "blog" 
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    fields:
-     - {label: "Tags", name: "tags", widget: "hidden", default: ["blog"]}
+   fields:
+      - {label: "Layout", name: "layout", widget: "hidden", default: "post.njk"}
+      - {label: "Tags", name: "tags", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Author", name: "author", widget: "string", default: "Admin"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
