--- a/admin/config.yml
+++ b/admin/config.yml
@@ -10,12 +10,12 @@ public_folder: "/images"
 collections:
   - name: "blog"
     label: "Articles"
-    folder: "_posts"
+    folder: "_posts" # Double check this matches your folder name exactly!
+    extension: "md"
+    format: "frontmatter"
     create: true
-    # This is the "secret sauce" that connects to your homepage
-    tag: "blog" 
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-   fields:
+    slug: "{{slug}}"
+    fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "post.njk"}
       - {label: "Tags", name: "tags", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
