--- a/admin/config.yml
+++ b/admin/config.yml
@@ -34,4 +34,14 @@ collections:
       - {label: "Author", name: "author", widget: "string", default: "Admin"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Featured Image", name: "thumbnail", widget: "image", required: false}
+      - {label: "Body", name: "body", widget: "markdown"} 
+      - name: "pages"
+    label: "Pages"
+    folder: "pages"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Layout", name: "layout", widget: "hidden", default: "base.njk"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Show in Menu", name: "show_in_menu", widget: "boolean", default: true}
       - {label: "Body", name: "body", widget: "markdown"}
