--- a/admin/config.yml
+++ b/admin/config.yml
@@ -7,6 +7,7 @@ media_folder: "images"
 public_folder: "/images"
 
 collections:
+  # 1. SITE SETTINGS (Color, Title, Font, and Menu)
   - name: "settings"
     label: "Site Settings"
     delete: false
@@ -19,8 +20,9 @@ collections:
         fields:
           - {label: "Site Name", name: "site_title", widget: "string"}
           - {label: "Theme Color", name: "brand_color", widget: "color"}
-          - {label: "Font Style", name: "font_style", widget: "select", options: ["serif", "sans-serif", "mono"]} 
-          - name: "navigation"
+          - {label: "Font Style", name: "font_style", widget: "select", options: ["serif", "sans", "mono"]}
+
+      - name: "navigation"
         label: "Menu Links"
         file: "_data/navigation.json"
         fields:
@@ -28,9 +30,10 @@ collections:
             name: "items"
             widget: "list"
             fields:
-              - {label: "Label", name: "text", widget: "string"}
-              - {label: "URL", name: "link", widget: "string"}
+              - {label: "Link Text", name: "text", widget: "string"}
+              - {label: "URL (e.g. /about or /)", name: "link", widget: "string"}
 
+  # 2. NEWS ARTICLES
   - name: "blog"
     label: "Articles"
     folder: "_posts"
@@ -44,8 +47,10 @@ collections:
       - {label: "Author", name: "author", widget: "string", default: "Admin"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Featured Image", name: "thumbnail", widget: "image", required: false}
-      - {label: "Body", name: "body", widget: "markdown"} 
-      - name: "pages"
+      - {label: "Body", name: "body", widget: "markdown"}
+
+  # 3. INDIVIDUAL PAGES (About, Contact, etc.)
+  - name: "pages"
     label: "Pages"
     folder: "pages"
     create: true
@@ -53,5 +58,4 @@ collections:
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "base.njk"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Show in Menu", name: "show_in_menu", widget: "boolean", default: true}
       - {label: "Body", name: "body", widget: "markdown"}
